--- a/index.html
+++ b/index.html
@@ -7,22 +7,36 @@
     <link href="./style.css" rel="stylesheet"> 
 </head>
 <body>
-    <div class="bar"> 
+    <div class="menu-bar"> 
         <a href="./index.html" class="logo"> Focus Garden </a>
-        <a href="./pricing.html">Pricing</a>
-        <a href="./get-started.html">Get started for free</a>
+        <div class="right">
+            <div><a href="./pricing.html" class="pricing">Pricing</a> </div>
+            <div> <a href="./get-started.html" class="get-started">Get started for free</a> </div>
+        </div>
     </div>
-    <div> 
-        <h1> Get addictive!</h1>
-        <div> Trick your brain by gamifying your progress, and get things done quickly! Cultivate a flower in your garden by focusing. <div>
+    <div class="content-1"> 
+        <div class="left"> 
+            <h1> Get addictive to focus!</h1>
+            <div> Trick your brain by gamifying your progress, and get things done quickly! Cultivate a flower in your garden by focusing. <div>
+        </div>
         <img src="./img/4.jpg">
     </div>
         <h2> Make your progress visible. </h2> 
         <img src="./img/3.png">
     </div>
     <div class="quote">
+        <h2>Boost your productivity to the next level.</h2>
         <div>“Every small win fuels the next. Gamify your journey. </div> 
-        <div> Progress feels better when it’s played like a game.” </div>
+        <div> Progress feels better when it's played like a game.” </div>
+    </div>
+    <div class="sign-up">
+        <h3> SIGN UP FOR FREE. </h3>
+        <div> Start using Focus Garden for free. </div>
+        <button>Sign Up</button>
+    </div>
+    <div class="footer">
+        <div> Copyright © Focus Garden 2025 </div>
+        <div> Illustrations by Freepik </div>
     </div>
 </body>
 </html>
