Finish homepage style

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Focus Garden</title>
     <link href="./style.css" rel="stylesheet"> 
 </head>
-<body>
+<body id="body">
     <div class="menu-bar"> 
         <a href="./index.html" class="logo"> Focus Garden </a>
         <div class="right">
@@ -14,26 +14,37 @@
             <div> <a href="./get-started.html" class="get-started">Get started for free</a> </div>
         </div>
     </div>
+
     <div class="content-1"> 
         <div class="left"> 
-            <h1> Get addictive to focus!</h1>
-            <div> Trick your brain by gamifying your progress, and get things done quickly! Cultivate a flower in your garden by focusing. <div>
+            <h1 class="headline"> Get <span class="addictive-span">addictive </span> to <span class="focus-span"> focus </span></h1>
+            <div> Trick your brain by <span class="gamifying-span">gamifying</span> your progress, and get things done quickly! Cultivate a digital flower in your garden by focusing. </div>
+            <div class="get-started-container"> <a href="./get-started.html" class="get-started">Get started for free</a> </div>
         </div>
         <img src="./img/4.jpg">
     </div>
-        <h2> Make your progress visible. </h2> 
+
+    <div class="content-2">
+        <h1 class="headline"> Make your progress visible. </h1>
+        <div>Get motivated and avoid procrastination by making your progress visible! </div>
         <img src="./img/3.png">
     </div>
+
     <div class="quote">
-        <h2>Boost your productivity to the next level.</h2>
-        <div>“Every small win fuels the next. Gamify your journey. </div> 
-        <div> Progress feels better when it's played like a game.” </div>
+        <h2 class="quote-headline">Boost your <span class="productivity-span-quote">productivity</span> to the next level</h2>
+        <div class="quotes-content">
+        <div class="quotes"> <q>Every small win fuels the next. Gamify your journey.</q> </div> 
+        <div class="quotes"> <q>Progress feels better when it's played like a game.</q> </div>
+        <div class="quotes"> <q>Gamification is the bridge between motivation and behavior.</q> — Kevin Werbach </div>
+        </div>
+
     </div>
+
     <div class="sign-up">
         <h3> SIGN UP FOR FREE. </h3>
-        <div> Start using Focus Garden for free. </div>
-        <button>Sign Up</button>
+        <a href="./get-started.html" class="sign-up-button">GET STARTED</a>
     </div>
+
     <div class="footer">
         <div> Copyright © Focus Garden 2025 </div>
         <div> Illustrations by Freepik </div>
