--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
     <div class="menu-bar"> 
         <a href="./index.html" class="logo"> Focus Garden </a>
         <div class="right">
-            <div><a href="./pricing.html" class="pricing">Pricing</a> </div>
-            <div> <a href="./get-started.html" class="get-started">Get started for free</a> </div>
+            <div><a href="./index.html" class="pricing">Pricing</a> </div>
+            <div> <a href="./index.html" class="get-started">Get started for free</a> </div>
         </div>
     </div>
-
     <div class="content-1"> 
         <div class="left"> 
             <h1 class="headline"> Get <span class="addictive-span">addictive </span> to <span class="focus-span"> focus </span></h1>
             <div> Trick your brain by <span class="gamifying-span">gamifying</span> your progress, and get things done quickly! Cultivate a digital flower in your garden by focusing. </div>
-            <div class="get-started-container"> <a href="./get-started.html" class="get-started">Get started for free</a> </div>
+            <div class="get-started-container"> <a href="./index.html" class="get-started">Get started for free</a> </div>
         </div>
         <img src="./img/4.jpg">
     </div>
@@ -42,7 +41,7 @@
 
     <div class="sign-up">
         <h3> SIGN UP FOR FREE. </h3>
-        <a href="./get-started.html" class="sign-up-button">GET STARTED</a>
+        <a href="./index.html" class="sign-up-button">GET STARTED</a>
     </div>
 
     <div class="footer">
